# agentic-risk-scan

./: .agentic-risk-scan.json  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: false_positive.yml  rule_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: adoption.md  config.schema.json  project-brief.md  releasing.md  reporting.md  research.md  rules.md  threat-model.md
examples/: README.md
examples/safe-agent-configs/.claude/: settings.json
examples/safe-agent-configs/.codex/: config.toml
examples/safe-agent-configs/.gemini/: settings.json
examples/safe-agent-workflow/: AGENTS.md
examples/safe-agent-workflow/.github/workflows/: safe.yml
examples/unsafe-agent-configs/.claude/: settings.json
examples/unsafe-agent-configs/.codex/: config.toml
examples/unsafe-agent-configs/.gemini/: settings.json
examples/unsafe-ai-pr-bot/: .mcp.json  AGENTS.md  package.json
src/agentic_risk_scan/: __init__.py  audit_report.py  baseline.py  cli.py  config.py  doctor.py  gitdiff.py  inventory.py  models.py  registry.py  reporters.py  scanner.py  workflow.py
src/agentic_risk_scan/rules/: __init__.py  agent_config.py  agent_instructions.py  common.py  github_actions.py  mcp.py  package_scripts.py
tests/: test_agent_config.py  test_agent_instructions.py  test_cli.py  test_examples.py  test_github_actions.py  test_mcp_and_package.py  test_uncovered_rules.py
(+1 files in other folders)
