[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-risk-scan"
version = "0.4.0"
description = "Dependency-free static scanner for AI agent workflow and MCP risks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agentic Risk Scan Contributors" }
]
keywords = [
  "ai-agent",
  "github-actions",
  "mcp",
  "security",
  "static-analysis",
  "supply-chain"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ecoreal/agentic-risk-scan"
Issues = "https://github.com/ecoreal/agentic-risk-scan/issues"
Security = "https://github.com/ecoreal/agentic-risk-scan/security"

[project.scripts]
agentic-risk-scan = "agentic_risk_scan.cli:main"
ars = "agentic_risk_scan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.agentic-risk-scan]
fail-on = "high"
